src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__string__try_parse_monotonic_iso8601_timestamp.snap
---
source: src/expr/src/scalar/func/impls/string.rs
expression: "#[sqlfunc(sqlname = \"try_parse_monotonic_iso8601_timestamp\")]\nfn try_parse_monotonic_iso8601_timestamp<'a>(\n    a: &'a str,\n) -> Option<CheckedTimestamp<NaiveDateTime>> {\n    let ts = mz_persist_types::timestamp::try_parse_monotonic_iso8601_timestamp(a)?;\n    let ts = CheckedTimestamp::from_timestamplike(ts)\n        .expect(\"monotonic_iso8601 range is a subset of CheckedTimestamp domain\");\n    Some(ts)\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect,
)]
pub struct TryParseMonotonicIso8601Timestamp;
impl crate::func::EagerUnaryFunc for TryParseMonotonicIso8601Timestamp {
    type Input<'a> = &'a str;
    type Output<'a> = Option<CheckedTimestamp<NaiveDateTime>>;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        try_parse_monotonic_iso8601_timestamp(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
}
impl std::fmt::Display for TryParseMonotonicIso8601Timestamp {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("try_parse_monotonic_iso8601_timestamp")
    }
}
fn try_parse_monotonic_iso8601_timestamp<'a>(
    a: &'a str,
) -> Option<CheckedTimestamp<NaiveDateTime>> {
    let ts = mz_persist_types::timestamp::try_parse_monotonic_iso8601_timestamp(a)?;
    let ts = CheckedTimestamp::from_timestamplike(ts)
        .expect("monotonic_iso8601 range is a subset of CheckedTimestamp domain");
    Some(ts)
}
