src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__string__upper.snap
---
source: src/expr/src/scalar/func/impls/string.rs
expression: "#[sqlfunc()]\nfn upper<'a>(a: &'a str) -> String {\n    a.to_uppercase()\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect,
)]
pub struct Upper;
impl crate::func::EagerUnaryFunc for Upper {
    type Input<'a> = &'a str;
    type Output<'a> = String;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        upper(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
}
impl std::fmt::Display for Upper {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str(stringify!(upper))
    }
}
fn upper<'a>(a: &'a str) -> String {
    a.to_uppercase()
}
